Started to add apis for lon and lan

--- a/index.html
+++ b/index.html
@@ -20,18 +20,29 @@
   <main>
     
     <div id="searchBarDiv">
-        <div class="ui action input" id="searchBar">
+        <h3>Search for a city</h3>
+        <div class="ui action input">
             <input type="text" placeholder="Type in an American City..." id="citySearch">
             <button class="ui button" id="citySearchSubmit">Search</button>
         </div>
     </div>
 
-    <div class="ui column grid">
+    <div class="ui column stackable grid">
         <div class="four wide column" id="recentSearchDiv">
-            <h1>dsf</h1>
+            <h1>Recent Cities</h1>
+            <div class="ui list">
+                <div class="item">
+
+                </div>
+            </div>
         </div>
         <div class="twelve wide column" id="weatherDisplayDiv">
-            <h1>dsf</h1>
+            <div>
+                <h1>Current Weather</h1>
+                <div id="currentWeatherDiv">
+                    <h1>sdf</h1>
+                </div>
+            </div>
         </div>
     </div>
 
