Have begun to append info to screen

--- a/index.html
+++ b/index.html
@@ -38,9 +38,37 @@
         </div>
         <div class="twelve wide column" id="weatherDisplayDiv">
             <div>
-                <h1>Current Weather</h1>
+                <h1 id="currentWeatherName">Current Weather</h1>
                 <div id="currentWeatherDiv">
                     <h1>sdf</h1>
+                </div>
+                <h1>5 Day Forecast</h1>
+                <div class="ui grid" id="futureWeatherDiv">
+                    <div class="ui three wide column heroCard" id="forecast1">
+                        <h3>Date</h3>
+                        <h3>Temperature</h3>
+                        <h3>Wind</h3>
+                    </div>
+                    <div class="ui three wide column heroCard" id="forecast2">
+                        <h3>Date</h3>
+                        <h3>Temperature</h3>
+                        <h3>Wind</h3>
+                    </div>
+                    <div class="ui three wide column heroCard" id="forecast3">
+                        <h3>Date</h3>
+                        <h3>Temperature</h3>
+                        <h3>Wind</h3>
+                    </div>
+                    <div class="ui three wide column heroCard" id="forecast4">
+                        <h3>Date</h3>
+                        <h3>Temperature</h3>
+                        <h3>Wind</h3>
+                    </div>
+                    <div class="ui three wide column heroCard" id="forecast5">
+                        <h3>Date</h3>
+                        <h3>Temperature</h3>
+                        <h3>Wind</h3>
+                    </div>
                 </div>
             </div>
         </div>
