--- a/index.html
+++ b/index.html
@@ -48,26 +48,31 @@
                         <h3>Date</h3>
                         <h3>Temperature</h3>
                         <h3>Wind</h3>
+                        <h3>Humidity</h3>
                     </div>
                     <div class="ui three wide column heroCard" id="forecast2">
                         <h3>Date</h3>
                         <h3>Temperature</h3>
                         <h3>Wind</h3>
+                        <h3>Humidity</h3>
                     </div>
                     <div class="ui three wide column heroCard" id="forecast3">
                         <h3>Date</h3>
                         <h3>Temperature</h3>
                         <h3>Wind</h3>
+                        <h3>Humidity</h3>
                     </div>
                     <div class="ui three wide column heroCard" id="forecast4">
                         <h3>Date</h3>
                         <h3>Temperature</h3>
                         <h3>Wind</h3>
+                        <h3>Humidity</h3>
                     </div>
                     <div class="ui three wide column heroCard" id="forecast5">
                         <h3>Date</h3>
                         <h3>Temperature</h3>
                         <h3>Wind</h3>
+                        <h3>Humidity</h3>
                     </div>
                 </div>
             </div>
