--- a/index.html
+++ b/index.html
@@ -38,9 +38,20 @@
         </div>
         <div class="twelve wide column" id="weatherDisplayDiv">
             <div>
-                <h1 id="currentWeatherName">Current Weather</h1>
+                <h1 id="currentWeatherName">City Name</h1>
                 <div id="currentWeatherDiv">
-                    <h1>sdf</h1>
+                    <h3 id="currentDate">Date</h3>
+                    <div class="ui grid">
+                        <div class="ui two wide column">
+                            <h3 id="currentTemp">asdf</h3>
+                        </div>
+                        <div class="ui two wide column">
+                            <h3 id="currentWind">asdf</h3>
+                        </div>
+                        <div class="ui two wide column">
+                            <h3 id="currentHumdity">asdf</h3>
+                        </div>
+                    </div>
                 </div>
                 <h1>5 Day Forecast</h1>
                 <div class="ui grid" id="futureWeatherDiv">
