Worked out issues with local storage, got it to append to recent cities list

--- a/index.html
+++ b/index.html
@@ -30,10 +30,8 @@
     <div class="ui column stackable grid">
         <div class="four wide column" id="recentSearchDiv">
             <h1>Recent Cities</h1>
-            <div class="ui list">
-                <div class="item">
-
-                </div>
+            <div id="recentCityList">
+                
             </div>
         </div>
         <div class="twelve wide column" id="weatherDisplayDiv">
@@ -43,13 +41,13 @@
                     <h3 id="currentDate">Date</h3>
                     <div class="ui grid">
                         <div class="ui two wide column">
-                            <h3 id="currentTemp">asdf</h3>
+                            <h3 id="currentTemp">currentTemp</h3>
                         </div>
                         <div class="ui two wide column">
-                            <h3 id="currentWind">asdf</h3>
+                            <h3 id="currentWind">currentWind</h3>
                         </div>
                         <div class="ui two wide column">
-                            <h3 id="currentHumdity">asdf</h3>
+                            <h3 id="currentHumdity">currentHumdity</h3>
                         </div>
                     </div>
                 </div>
