--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 <h1 id="currentWeatherName">City Name</h1>
                 <div id="currentWeatherDiv">
                     <h3 id="currentDate">Date</h3>
+                    <img id="currentForecast">
                     <div class="ui grid">
                         <div class="ui two wide column">
                             <h3 id="currentTemp">currentTemp</h3>
@@ -55,30 +56,35 @@
                 <div class="ui grid" id="futureWeatherDiv">
                     <div class="ui three wide column heroCard" id="forecast1">
                         <h3>Date</h3>
+                        <img>
                         <h3>Temperature</h3>
                         <h3>Wind</h3>
                         <h3>Humidity</h3>
                     </div>
                     <div class="ui three wide column heroCard" id="forecast2">
                         <h3>Date</h3>
+                        <img>
                         <h3>Temperature</h3>
                         <h3>Wind</h3>
                         <h3>Humidity</h3>
                     </div>
                     <div class="ui three wide column heroCard" id="forecast3">
                         <h3>Date</h3>
+                        <img>
                         <h3>Temperature</h3>
                         <h3>Wind</h3>
                         <h3>Humidity</h3>
                     </div>
                     <div class="ui three wide column heroCard" id="forecast4">
                         <h3>Date</h3>
+                        <img>
                         <h3>Temperature</h3>
                         <h3>Wind</h3>
                         <h3>Humidity</h3>
                     </div>
                     <div class="ui three wide column heroCard" id="forecast5">
                         <h3>Date</h3>
+                        <img>
                         <h3>Temperature</h3>
                         <h3>Wind</h3>
                         <h3>Humidity</h3>
